[package]
name = "lupin"
version = "0.2.0"
license = "MIT"
readme = "README.md"
edition = "2021"
authors = ["hov1417"]

[dependencies]
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["cargo", "derive"] }
dirs = "5.0.0"
eyre = "0.6.8"
futures = { version = "0.3.25", features = ["std"] }
mime_guess = "2.0.4"
mime = "0.3.17"
grammers-client = "0.4.0"
grammers-session = "0.4.0"
grammers-tl-types = "0.4.0"
indicatif = "0.17.1"
itertools = "0.10.5"
reqwest = { version = "0.11.12", features = ["gzip", "stream"] }
rpassword = "7.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
tar = "0.4.38"
temp-dir = "0.1.11"
tokio = { version = "1.21.2", features = ["io-std", "fs", "macros", "rt-multi-thread"] }
zstd = { version = "0.12.3", features = ["zstdmt"] }
